@@ -2,6 +2,7 @@ Revision history for CGI-Info
 
 0.103
 	Mark Clickagy as a bot
+	Don't use notice() since Log::Log4perl doesn't understand it
 
 0.102	Thu May  8 21:39:31 EDT 2025
 	Use Class::Debug
